# berlin_link_hub

./: .env-example  Cargo.toml
backend/: Cargo.toml
backend/migrations/: 20241124011250_create_user_roles_users_uris_tables.down.sql  20241124011250_create_user_roles_users_uris_tables.up.sql
backend/src/: ctx.rs  database.rs  error.rs  main.rs  model.rs  web.rs
backend/src/database/: auth.rs  uri.rs
backend/src/model/: auth.rs  csv.rs  upload.rs  uri.rs
backend/src/web/: mw_auth.rs  routes_auth.rs  routes_home.rs  routes_link.rs  routes_user.rs
backend/templates/: base.html  login.html  navbar.html  preview.html  table.html  upload.html
harvester/: Cargo.toml
harvester/src/: controller_loop.rs  database.rs  error.rs  http.rs  main.rs  model.rs  pg_loop.rs
harvester/src/database/: uri.rs
harvester/src/http/: uri.rs
harvester/src/model/: uri.rs
src/: error.rs  log.rs  main.rs  model.rs  web.rs
src/model/: greeting.rs  link.rs
src/web/: mw_auth.rs  routes_link.rs  routes_user.rs
