[package]
name = "berlin_link_hub"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9" }

tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }

tracing = "0.1.40"

tracing-subscriber = "0.3.18"

tower-http = { version = "0.6.2", features = ["trace"] }

serde = { version = "1.0.215", features = ["serde_derive"] }
