[package]
name = "berlin_link_hub"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9" }

chrono = "0.4.38"

dotenv = "0.15.0"

lazy-regex = "3.3.0"

tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }

tracing = "0.1.40"

tracing-subscriber = "0.3.18"

tower-cookies = { version = "0.10.0", features = [
    "axum-core",
    "private",
    "signed",
] }

serde = { version = "1.0.215", features = ["serde_derive"] }

serde_json = "1.0.133"

serde_with = "3.11.0"

uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }

strum_macros = "0.26.4"
